# storage/api-docs/api-docs.json
@@ -56,11 +56,101 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Devuelve un listado de estudiantes."
+                        "description": "Devuelve un listado de estudiantes.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "current_page": {
+                                            "type": "integer",
+                                            "example": 1
+                                        },
+                                        "total": {
+                                            "type": "integer",
+                                            "example": 1
+                                        },
+                                        "per_page": {
+                                            "type": "string",
+                                            "example": "1"
+                                        },
+                                        "last_page": {
+                                            "type": "integer",
+                                            "example": 1
+                                        },
+                                        "from": {
+                                            "type": "integer",
+                                            "example": 1
+                                        },
+                                        "to": {
+                                            "type": "integer",
+                                            "example": 1
+                                        },
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/components/schemas/Student"
+                                            },
+                                            "collectionFormat": "multi"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
                     },
                     "500": {
                         "description": "Ha ocurrido un error."
                     }
+                }
+            }
+        }
+    },
+    "components": {
+        "schemas": {
+            "Student": {
+                "required": [
+                    "password"
+                ],
+                "properties": {
+                    "id": {
+                        "type": "integer",
+                        "example": "1"
+                    },
+                    "name": {
+                        "type": "string",
+                        "example": "string"
+                    },
+                    "last_name": {
+                        "type": "string",
+                        "example": "string"
+                    },
+                    "birth_date": {
+                        "type": "string",
+                        "format": "date-time",
+                        "example": "2019-02-25"
+                    },
+                    "gender": {
+                        "type": "string",
+                        "maxLength": 1,
+                        "example": "F"
+                    },
+                    "code": {
+                        "type": "string",
+                        "maxLength": 10,
+                        "example": "1234567890"
+                    },
+                    "full_name": {
+                        "type": "string",
+                        "example": "string"
+                    },
+                    "age": {
+                        "type": "integer",
+                        "example": "1"
+                    }
+                },
+                "type": "object",
+                "xml": {
+                    "name": "Student"
                 }
             }
         }
